Fix shadow not visible over main

--- a/css/main.css
+++ b/css/main.css
@@ -148,6 +148,7 @@ header {
   background: var(--primary);
   color: white;
   grid-area: header;
+  z-index: 1;
 }
 
 header ::selection {
